test/errors/type/list/__len.yasl

echo mt.lookup([], .__len)(0)
